Add user login endpoint
