# packages/api/src/swagger/docs.json
@@ -28,15 +28,6 @@
           "Users"
         ],
         "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "$ref": "#/schemas/CreateUserRequest"
-            }
-          }
-        ],
         "responses": {
           "200": {
             "description": "OK",
@@ -45,6 +36,62 @@
                 "schema": {
                   "$ref": "#/schemas/CreateUserResponse"
                 }
+              }
+            }
+          }
+        },
+        "requestBody": {
+          "in": "body",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/schemas/CreateUserRequest"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/schemas/CreateUserRequest"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/users/login": {
+      "post": {
+        "tags": [
+          "Users"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/schemas/UserLoginResponse"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "in": "body",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/schemas/UserLoginRequest"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/schemas/UserLoginRequest"
               }
             }
           }
@@ -61,9 +108,50 @@
     }
   },
   "schemas": {
-    "CreateUserRequest": {
+    "UserId": {
+      "description": "Identifier type for public.users",
+      "allOf": [
+        {
+          "type": "object",
+          "properties": {
+            "__brand": {
+              "type": "string",
+              "const": "UsersId"
+            }
+          },
+          "required": [
+            "__brand"
+          ]
+        },
+        {
+          "type": "string"
+        }
+      ]
+    },
+    "User": {
+      "description": "Represents the table public.users",
       "type": "object",
       "properties": {
+        "id": {
+          "description": "Identifier type for public.users",
+          "allOf": [
+            {
+              "type": "object",
+              "properties": {
+                "__brand": {
+                  "type": "string",
+                  "const": "UsersId"
+                }
+              },
+              "required": [
+                "__brand"
+              ]
+            },
+            {
+              "type": "string"
+            }
+          ]
+        },
         "name": {
           "type": "string"
         },
@@ -72,6 +160,67 @@
         },
         "password": {
           "type": "string"
+        },
+        "created_at": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "updated_at": {
+          "type": "string",
+          "format": "date-time"
+        }
+      },
+      "required": [
+        "created_at",
+        "id",
+        "name",
+        "password",
+        "updated_at",
+        "username"
+      ]
+    },
+    "UsersInitializer": {
+      "description": "Represents the initializer for the table public.users",
+      "type": "object",
+      "properties": {
+        "id": {
+          "description": "Default value: gen_random_uuid()",
+          "allOf": [
+            {
+              "type": "object",
+              "properties": {
+                "__brand": {
+                  "type": "string",
+                  "const": "UsersId"
+                }
+              },
+              "required": [
+                "__brand"
+              ]
+            },
+            {
+              "type": "string"
+            }
+          ]
+        },
+        "name": {
+          "type": "string"
+        },
+        "username": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        },
+        "created_at": {
+          "description": "Default value: CURRENT_TIMESTAMP",
+          "type": "string",
+          "format": "date-time"
+        },
+        "updated_at": {
+          "description": "Default value: CURRENT_TIMESTAMP",
+          "type": "string",
+          "format": "date-time"
         }
       },
       "required": [
@@ -80,12 +229,78 @@
         "username"
       ]
     },
-    "CreateUserResponse": {
+    "UsersMutator": {
+      "description": "Represents the mutator for the table public.users",
       "type": "object",
       "properties": {
         "id": {
+          "description": "Identifier type for public.users",
+          "allOf": [
+            {
+              "type": "object",
+              "properties": {
+                "__brand": {
+                  "type": "string",
+                  "const": "UsersId"
+                }
+              },
+              "required": [
+                "__brand"
+              ]
+            },
+            {
+              "type": "string"
+            }
+          ]
+        },
+        "name": {
           "type": "string"
         },
+        "username": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        },
+        "created_at": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "updated_at": {
+          "type": "string",
+          "format": "date-time"
+        }
+      }
+    },
+    "UserLoginRequest": {
+      "type": "object",
+      "properties": {
+        "username": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      },
+      "required": [
+        "password",
+        "username"
+      ]
+    },
+    "UserLoginResponse": {
+      "type": "object",
+      "properties": {
+        "token": {
+          "type": "string"
+        }
+      },
+      "required": [
+        "token"
+      ]
+    },
+    "CreateUserRequest": {
+      "type": "object",
+      "properties": {
         "name": {
           "type": "string"
         },
@@ -94,8 +309,53 @@
         }
       },
       "required": [
+        "name",
+        "username"
+      ]
+    },
+    "CreateUserResponse": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "description": "Identifier type for public.users",
+          "allOf": [
+            {
+              "type": "object",
+              "properties": {
+                "__brand": {
+                  "type": "string",
+                  "const": "UsersId"
+                }
+              },
+              "required": [
+                "__brand"
+              ]
+            },
+            {
+              "type": "string"
+            }
+          ]
+        },
+        "name": {
+          "type": "string"
+        },
+        "username": {
+          "type": "string"
+        },
+        "created_at": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "updated_at": {
+          "type": "string",
+          "format": "date-time"
+        }
+      },
+      "required": [
+        "created_at",
         "id",
         "name",
+        "updated_at",
         "username"
       ]
     }
